--- a/src/setting/systemIntegration/components/JiraLoadData.scss
+++ b/src/setting/systemIntegration/components/JiraLoadData.scss
@@ -2,17 +2,32 @@
     padding: 10px;
 }
 .load-jira {
-    padding: 20px 0;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #DEEBFF;
 }
 .load-box {
-    background-color: #DEEBFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     width: 100%;
-    height: 80px;
+    // height: 140px;
     border-radius: 4px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+}
+.load-precess {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 10px;
+    .load-precess-text {
+        padding-top: 5px;
+    }
 }
 .load-progress {
     width: 80%;
