--- a/src/setting/systemIntegration/components/JiraLoadData.scss
+++ b/src/setting/systemIntegration/components/JiraLoadData.scss
@@ -27,6 +27,9 @@
     padding-top: 10px;
     .load-precess-text {
         padding-top: 5px;
+        .load-precess-name {
+            font-weight: 600;
+        }
     }
 }
 .load-progress {
