--- a/src/setting/systemIntegration/components/JiraLoadData.scss
+++ b/src/setting/systemIntegration/components/JiraLoadData.scss
@@ -10,14 +10,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
     // height: 140px;
     border-radius: 4px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
+    margin: 15px 0;
 }
 .load-precess {
     display: flex;
