--- a/src/home/common/components/HomePage.scss
+++ b/src/home/common/components/HomePage.scss
@@ -4,7 +4,7 @@
     background: var(--tiklab-gray-600);
     position: relative;
     z-index: 0;
-    padding: 0 20px;
+    padding: 0 20px 20px;
 
     .home-tab {
         display: flex;
