--- a/src/project/workLog/components/LogContent.scss
+++ b/src/project/workLog/components/LogContent.scss
@@ -1,25 +1,47 @@
+.workItem-log {
+    padding: 20px;
+    height: calc(100vh - 49px);
+    background: #fff;
+    .worklog-content {
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: normal;
+        word-break: break-word;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        padding-right: 20px;
+        cursor: pointer;
+    }
+    .worklog-content:hover {
+        color: var(--thoughtware-blue);
+    }
+}
+
+
 .log-tab-filter {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 15px;
 
-    .log-view-tabs {
+    .log-tabs {
         display: flex;
         align-items: center;
         justify-content: flex-start;
         height: 50px;
         line-height: 50px;
 
-        .log-view-tab {
+        .log-tab {
             font-size: var(--thoughtware-font-13);
+            ;
             cursor: pointer;
             height: 50px;
             line-height: 50px;
             margin-right: 20px;
         }
 
-        .log-view-tab:last-child {
+        .log-tab:last-child {
             margin-right: 0;
         }
 
@@ -29,10 +51,6 @@
             border-bottom: 2px solid var(--thoughtware-blue);
         }
     }
-    .log-tab-filter-right {
-        display: flex;
-        align-items: center;
-        gap: 20px;
-    }
+
     
 }
