--- a/src/workLog/components/Log.scss
+++ b/src/workLog/components/Log.scss
@@ -1,7 +1,7 @@
 .log {
-    padding: 20px 20px 0 20px;
     height: calc(100vh - 49px);
     background: #fff;
+
     .log-tab {
         display: flex;
         gap: 20px;
@@ -9,6 +9,7 @@
         padding: 20px 0 15px 0;
         flex: 1;
         padding: 0 20px;
+
         .log-tab-tabpane {
             cursor: pointer;
             background-color: var(--thoughtware-gray-600);
@@ -26,20 +27,8 @@
             background-color: var(--thoughtware-gray-200);
         }
     }
-    // .worklog-content {
-    //     text-overflow: ellipsis;
-    //     overflow: hidden;
-    //     white-space: normal;
-    //     word-break: break-word;
-    //     display: -webkit-box;
-    //     -webkit-line-clamp: 2;
-    //     -webkit-box-orient: vertical;
-    //     padding-right: 20px;
-    //     cursor: pointer;
-    // }
-    // .worklog-content:hover {
-    //     color: var(--thoughtware-blue);
-    // }
+
+    .log-content {
+        background-color: #fff;
+    }
 }
-
-
