--- a/src/work/components/WorkBasicInfo.scss
+++ b/src/work/components/WorkBasicInfo.scss
@@ -218,7 +218,7 @@
 
             .work-detail-box-content {
                 padding: 10px;
-                height: 600px;
+                max-height: 600px;
                 overflow: auto;
             }
             .work-detail-box-content::-webkit-scrollbar {
