--- a/src/work/components/WorkBodar.scss
+++ b/src/work/components/WorkBodar.scss
@@ -25,7 +25,7 @@
             
             .work-bodar-box-border {
                 border-radius: 4px;
-                min-height: 100%;
+                min-height: calc(100% - 72px);
                 border: 2px var(--thoughtware-blue) dashed;
             }
             .work-bodar-box {
@@ -55,7 +55,7 @@
                 .work-border-box-list {
                     height: calc(100% - 72px);
                     overflow: auto;
-                    width: fit-content;
+                    // width: fit-content;
                     .change-page {
                         display: flex;
                         justify-content: center;
