--- a/src/work/components/WorkChildAdd.scss
+++ b/src/work/components/WorkChildAdd.scss
@@ -10,8 +10,7 @@
         width: 100%;
         box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%), 0 6px 16px rgb(0 0 0 / 8%), 0 9px 28px 8px rgb(0 0 0 / 5%);
         background: #fff;
-        top: 40px;
-        height: calc(100% - 50px);
+        height: 100%;
     }
 
     .child-add-search {
@@ -20,9 +19,8 @@
         border-top-right-radius: 4px;
         border-top-left-radius: 4px;
         align-items: center;
-        position: relative;
-        z-index: 5;
-
+        justify-content: space-between;
+        padding: 20px 10px 10px;
         .select-view {
             height: 32px;
             line-height: 32px;
@@ -45,11 +43,10 @@
     }
 
     .child-add-table {
-        padding: 0 10px;
-        margin: 10px 0;
+        padding: 0 20px;
         border-bottom-right-radius: 4px;
         border-bottom-left-radius: 4px;
-        max-height: 100%;
+        max-height: calc(100% - 63px);
         overflow: auto;
         background: #fff;
 
@@ -65,8 +62,11 @@
             line-height: 20px;
             font-size: 12px;
             text-align: center;
-            color: var(--thoughtware-blue);
             cursor: pointer;
+            margin-bottom: 10px;
+        }
+        .loading-more:hover{
+            color: var(--thoughtware-blue);
         }
     }
 
@@ -78,7 +78,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 10px 10px;
+        padding: 10px 0;
 
         .work-item-icon {
             display: inline-flex;
