--- a/src/work/components/WorkRelationAdd.scss
+++ b/src/work/components/WorkRelationAdd.scss
@@ -11,7 +11,7 @@
         width: 100%;
         box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%), 0 6px 16px rgb(0 0 0 / 8%), 0 9px 28px 8px rgb(0 0 0 / 5%);
         background: #fff;
-        top: 40px;
+        height: 100%;
         .relation-add-table-title {
             height: 30px;
             line-height: 30px;
@@ -23,12 +23,11 @@
     .relation-add-search {
         display: flex;
         gap: 20px;
-        // padding: 10px;
-        // border-bottom: 2px solid #f0f0f0;
         border-top-right-radius: 4px;
         border-top-left-radius: 4px;
         align-items: center;
         justify-content: space-between;
+        padding: 20px 10px 10px;
         .select-view {
             height: 32px;
             line-height: 32px;
@@ -57,11 +56,10 @@
         }
     }
     .relation-add-table {
-        padding: 0 10px;
-        margin: 10px 0;
+        padding: 0 20px;
         border-bottom-right-radius: 4px;
         border-bottom-left-radius: 4px;
-        max-height: calc(100vh - 420px);
+        max-height: calc(100% - 63px);
         overflow: auto;
         background: #fff;
         
@@ -70,8 +68,11 @@
             line-height: 20px;
             font-size: 12px;
             text-align: center;
-            color: var(--thoughtware-blue);
             cursor: pointer;
+            margin-bottom: 10px;
+        }
+        .loading-more:hover {
+            color: var(--thoughtware-blue);
         }
     }
     .relation-add-work-item:hover {
