--- a/src/work/components/WorkBasicInfo.scss
+++ b/src/work/components/WorkBasicInfo.scss
@@ -143,7 +143,7 @@
             margin-bottom: 15px;
             border-radius: 4px;
             width: 100%;
-            margin-bottom: 20px;
+            padding-bottom: 20px;
 
             .edit {
                 border: 1px solid #f0f0f0;
